--- a/public/css/room.css
+++ b/public/css/room.css
@@ -65,8 +65,9 @@ body {
 
 #remote-vid {
   width: 75%;
+  height: fit-content;
   border-radius: 10px;
-  background-color: aqua;
+  /* background-color: aqua; */
 }
 
 .sub-vid {
@@ -78,16 +79,16 @@ body {
 
 #local-vid {
   width: 100%;
-  height: 50%;
+  height: fit-content;
   border-radius: 10px;
-  background-color: aquamarine;
+  /* background-color: aquamarine; */
 }
 
 #remote-vid-2 {
   width: 100%;
-  height: 50%;
+  height: fit-content;
   border-radius: 10px;
-  background-color: cornflowerblue;
+  /* background-color: cornflowerblue; */
 }
 
 .control-section {
