--- a/views/room.pug
+++ b/views/room.pug
@@ -24,10 +24,10 @@ html(lang="en")
                   p(id="username") #{user}
                section(class="vid-container")
                   section(class="video-section")
-                     div(id="remote-vid")
+                     video(id="remote-vid" autoplay muted)
                      div(class="sub-vid")
-                        div(id="local-vid")
-                        div(id="remote-vid-2")
+                        video(id="local-vid" autoplay muted)
+                        video(id="remote-vid-2" autoplay muted)
                   section(class="control-section")
                      div(id="control")
          section(id="message-container")
