--- a/public/css/room.css
+++ b/public/css/room.css
@@ -67,7 +67,7 @@ body {
   width: 75%;
   height: fit-content;
   border-radius: 10px;
-  /* background-color: aqua; */
+  background-color: aqua;
 }
 
 .sub-vid {
@@ -75,26 +75,21 @@ body {
   display: flex;
   flex-direction: column;
   gap: 10px;
+  /* justify-content: space-around; */
 }
 
 #local-vid {
   width: 100%;
   height: fit-content;
   border-radius: 10px;
-  /* background-color: aquamarine; */
-}
-
-#remote-vid-2 {
-  width: 100%;
-  height: fit-content;
-  border-radius: 10px;
-  /* background-color: cornflowerblue; */
+  background-color: aquamarine;
 }
 
 .control-section {
   width: 100%;
   height: 10%;
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
@@ -143,7 +138,6 @@ input {
   background: linear-gradient(45deg, #181818, black);
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 15px;
-  color: aliceblue;
 }
 
 #button {
@@ -152,6 +146,51 @@ input {
   background-color: #f675ae;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: aliceblue;
+}
+
+button {
+  cursor: pointer;
+}
+
+#connId {
+  height: 40px;
+  color: black;
+  outline: none;
+  background: aliceblue;
+}
+
+#connId::placeholder {
+  color: black;
+}
+
+#connect {
+  height: 40px;
+  border: 1px solid #f675ae;
+  border-radius: 10px;
+  background-color: #f675ae;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: aliceblue;
+  cursor: pointer;
+}
+
+#call {
+  height: 40px;
+  border: 1px solid green;
+  border-radius: 10px;
+  background-color: green;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: aliceblue;
+  cursor: pointer;
+}
+
+#declined {
+  height: 40px;
+  border: 1px solid red;
+  border-radius: 10px;
+  background-color: red;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  color: aliceblue;
+  cursor: pointer;
 }
 
 strong {
